[gd_scene load_steps=34 format=3 uid="uid://cwt6vvuf855dq"]

[ext_resource type="Script" path="res://enemies/wolf/wolf.gd" id="1_g5ghx"]
[ext_resource type="Script" path="res://scripts/state_machine.gd" id="1_she2k"]
[ext_resource type="Script" path="res://enemies/wolf/Walk.gd" id="3_kb4hf"]
[ext_resource type="Script" path="res://enemies/wolf/WolfHitState.gd" id="4_4fp54"]
[ext_resource type="Script" path="res://enemies/wolf/Attack.gd" id="6_rkr3u"]
[ext_resource type="Script" path="res://scripts/Damageable.gd" id="6_vuy1y"]
[ext_resource type="Texture2D" uid="uid://d35s5ohy06yqu" path="res://assets/sprites/wolf/WolfRBLeg2.png" id="8_p6ao8"]
[ext_resource type="Texture2D" uid="uid://dn8enoyjk3j6a" path="res://assets/sprites/wolf/WolfRBLeg1.png" id="9_5xgcg"]
[ext_resource type="Texture2D" uid="uid://bgrhnurc4wfow" path="res://assets/sprites/wolf/WolfRBLeg3.png" id="10_s0nyx"]
[ext_resource type="Texture2D" uid="uid://b4wyusva3kied" path="res://assets/sprites/wolf/WolfRFLeg2.png" id="11_rfpdh"]
[ext_resource type="Texture2D" uid="uid://dxbodh3bujlii" path="res://assets/sprites/wolf/WolfRFLeg1.png" id="12_o5u8t"]
[ext_resource type="Texture2D" uid="uid://cbif67435qhi8" path="res://assets/sprites/wolf/WolfRFLeg3.png" id="13_wrchq"]
[ext_resource type="Texture2D" uid="uid://jotp5pp5uimj" path="res://assets/sprites/wolf/WolfTail.png" id="14_1migu"]
[ext_resource type="Texture2D" uid="uid://iv7v3fg1v1hg" path="res://assets/sprites/wolf/WolfLHead.png" id="15_4klb8"]
[ext_resource type="Texture2D" uid="uid://cuxdpx0qfjqss" path="res://assets/sprites/wolf/WolfBody1.png" id="16_hcu8r"]
[ext_resource type="Texture2D" uid="uid://cwdunbcegf1wr" path="res://assets/sprites/wolf/WolfBody2.png" id="17_ii1jo"]
[ext_resource type="Texture2D" uid="uid://cre31gwy8ftsr" path="res://assets/sprites/wolf/WolfLBLeg2.png" id="18_6y05e"]
[ext_resource type="Texture2D" uid="uid://dpdmq68x560av" path="res://assets/sprites/wolf/WolfLBLeg1.png" id="19_rlm1r"]
[ext_resource type="Texture2D" uid="uid://q1x6ao85j5cr" path="res://assets/sprites/wolf/WolfLBLeg3.png" id="20_8xnke"]
[ext_resource type="Texture2D" uid="uid://ccemb8qiwpvxt" path="res://assets/sprites/wolf/WolfLFLeg2.png" id="21_405jx"]
[ext_resource type="Texture2D" uid="uid://bk7qiqqx13ptl" path="res://assets/sprites/wolf/WolfLFLeg1.png" id="22_kr552"]
[ext_resource type="Texture2D" uid="uid://d4jdxbbkvaeel" path="res://assets/sprites/wolf/WolfLFLeg3.png" id="23_s5fh0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e1j66"]
size = Vector2(166, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mahho"]
size = Vector2(152, 116)

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_saf4k"]
target_nodepath = NodePath("../../IKTargetBackFrontLeg")
flip_bend_direction = true
joint_one_bone_idx = 4
joint_one_bone2d_node = NodePath("Base/Body/Front/BackFrontShoulder2")
joint_two_bone_idx = 5
joint_two_bone2d_node = NodePath("Base/Body/Front/BackFrontShoulder2/BackFrontLeg")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_eh2ct"]
target_nodepath = NodePath("../../IKTargetBackBackLeg")
flip_bend_direction = true
joint_one_bone_idx = 15
joint_one_bone2d_node = NodePath("Base/Body/Back/BackBactTight2")
joint_two_bone_idx = 16
joint_two_bone2d_node = NodePath("Base/Body/Back/BackBactTight2/BackBackLeg")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_nd1xr"]
target_nodepath = NodePath("../../IKTargetFrontFrontLeg")
flip_bend_direction = true
joint_one_bone_idx = 7
joint_one_bone2d_node = NodePath("Base/Body/Front/FrontFrontShoulder")
joint_two_bone_idx = 8
joint_two_bone2d_node = NodePath("Base/Body/Front/FrontFrontShoulder/FontFrontLeg")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_ydult"]
target_nodepath = NodePath("../../IKTargetFrontBackLeg")
flip_bend_direction = true
joint_one_bone_idx = 12
joint_one_bone2d_node = NodePath("Base/Body/Back/FrontBactTight")
joint_two_bone_idx = 13
joint_two_bone2d_node = NodePath("Base/Body/Back/FrontBactTight/FrontBackLeg")

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_vmo7g"]
enabled = true
modification_count = 4
modifications/0 = SubResource("SkeletonModification2DTwoBoneIK_saf4k")
modifications/1 = SubResource("SkeletonModification2DTwoBoneIK_eh2ct")
modifications/2 = SubResource("SkeletonModification2DTwoBoneIK_nd1xr")
modifications/3 = SubResource("SkeletonModification2DTwoBoneIK_ydult")

[sub_resource type="Animation" id="Animation_hj04y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PartsSKeletonContainer/Skeleton2D/Base/Body/Back/Tail:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PartsSKeletonContainer/Skeleton2D/Base/Body/Front/BackFrontShoulder2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PartsSKeletonContainer/Skeleton2D/Base/Body/Front/FrontFrontShoulder:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.282743]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PartsSKeletonContainer/Skeleton2D/Base/Body/Back/BackBactTight2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PartsSKeletonContainer/Skeleton2D/Base/Body/Back/FrontBactTight:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.282743]
}

[sub_resource type="Animation" id="Animation_xbreu"]
resource_name = "walk_left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PartsSKeletonContainer/Skeleton2D/Base/Body/Back/Tail:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PartsSKeletonContainer/Skeleton2D/Base/Body/Front/BackFrontShoulder2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1.07177, 1),
"update": 0,
"values": [0.0, 0.424115]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PartsSKeletonContainer/Skeleton2D/Base/Body/Front/FrontFrontShoulder:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.282743]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PartsSKeletonContainer/Skeleton2D/Base/Body/Back/BackBactTight2:rotation")
tracks/3/interp = 3
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.141372, -0.261799]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PartsSKeletonContainer/Skeleton2D/Base/Body/Back/FrontBactTight:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.141372]
}

[sub_resource type="Animation" id="Animation_yij14"]
resource_name = "walk_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PartsSKeletonContainer/Skeleton2D/Base/Body/Back/Tail:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.13621]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qmwp7"]
_data = {
"RESET": SubResource("Animation_hj04y"),
"walk_left": SubResource("Animation_xbreu"),
"walk_right": SubResource("Animation_yij14")
}

[node name="Wolf" type="CharacterBody2D" groups=["Enemies"]]
scale = Vector2(0.45, 0.45)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_g5ghx")

[node name="DirectionChangeTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Damageable" type="Node" parent="." node_paths=PackedStringArray("char_state_machine")]
script = ExtResource("6_vuy1y")
char_state_machine = NodePath("../StateMachine")

[node name="Timer" type="Timer" parent="Damageable"]
wait_time = 0.5
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_e1j66")

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource("1_she2k")
initial_state = NodePath("Walk")

[node name="Hit" type="Node" parent="StateMachine" node_paths=PackedStringArray("damagable")]
script = ExtResource("4_4fp54")
damagable = NodePath("../../Damageable")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("3_kb4hf")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("6_rkr3u")
charge_distance = 300
charge_end_distance = 150
attack_distance = 100
to_close_distance = 85

[node name="ChargePreparationTimer" type="Timer" parent="StateMachine/Attack"]
wait_time = 0.2
one_shot = true

[node name="ChargeTimer" type="Timer" parent="StateMachine/Attack"]
one_shot = true

[node name="AttacBuffer" type="Timer" parent="StateMachine/Attack"]
wait_time = 2.0

[node name="GroundDetectingRayCast" type="RayCast2D" parent="."]
position = Vector2(-48, 0)
target_position = Vector2(0, 75)

[node name="PlayerDetectingRayCast" type="RayCast2D" parent="."]
position = Vector2(0, -18)
rotation = 1.5708
target_position = Vector2(0, 600)
collision_mask = 2

[node name="Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_mahho")

[node name="PartsSKeletonContainer" type="Node2D" parent="."]
position = Vector2(15, 16)

[node name="Parts" type="Node2D" parent="PartsSKeletonContainer"]

[node name="BackBackLeg" type="Node2D" parent="PartsSKeletonContainer/Parts"]

[node name="WolfRbLeg2" type="Sprite2D" parent="PartsSKeletonContainer/Parts/BackBackLeg"]
position = Vector2(-97.7874, 70.1924)
rotation = -1.23043
texture = ExtResource("8_p6ao8")

[node name="WolfRbLeg1" type="Sprite2D" parent="PartsSKeletonContainer/Parts/BackBackLeg"]
position = Vector2(-24.2081, -71.5304)
rotation = 0.915525
texture = ExtResource("9_5xgcg")

[node name="WolfRbLeg3" type="Sprite2D" parent="PartsSKeletonContainer/Parts/BackBackLeg"]
position = Vector2(-97.7874, 70.1924)
rotation = -1.23043
texture = ExtResource("10_s0nyx")

[node name="FrontBackLeg" type="Node2D" parent="PartsSKeletonContainer/Parts"]

[node name="WolfRfLeg2" type="Sprite2D" parent="PartsSKeletonContainer/Parts/FrontBackLeg"]
position = Vector2(-48.8581, -28.9473)
rotation = 0.078565
texture = ExtResource("11_rfpdh")

[node name="WolfRfLeg1" type="Sprite2D" parent="PartsSKeletonContainer/Parts/FrontBackLeg"]
position = Vector2(-40.3976, -26.3071)
rotation = 0.259941
texture = ExtResource("12_o5u8t")

[node name="WolfRfLeg3" type="Sprite2D" parent="PartsSKeletonContainer/Parts/FrontBackLeg"]
position = Vector2(-50.6679, -27.195)
rotation = 0.078565
texture = ExtResource("13_wrchq")

[node name="WolfTail" type="Sprite2D" parent="PartsSKeletonContainer/Parts"]
position = Vector2(-25, -27)
texture = ExtResource("14_1migu")

[node name="Body" type="Node2D" parent="PartsSKeletonContainer/Parts"]

[node name="WolfBody1" type="Sprite2D" parent="PartsSKeletonContainer/Parts/Body"]
position = Vector2(-39, -33)
texture = ExtResource("16_hcu8r")

[node name="WolfBody2" type="Sprite2D" parent="PartsSKeletonContainer/Parts/Body"]
position = Vector2(-37, -33)
texture = ExtResource("17_ii1jo")

[node name="BackFrontLeg" type="Node2D" parent="PartsSKeletonContainer/Parts"]
position = Vector2(-1, 1)

[node name="WolfLbLeg2" type="Sprite2D" parent="PartsSKeletonContainer/Parts/BackFrontLeg"]
position = Vector2(-71.8304, -7.89302)
rotation = -0.106575
texture = ExtResource("18_6y05e")

[node name="WolfLbLeg1" type="Sprite2D" parent="PartsSKeletonContainer/Parts/BackFrontLeg"]
position = Vector2(-28.2698, -55.5098)
rotation = 0.509722
texture = ExtResource("19_rlm1r")

[node name="WolfLbFoot" type="Sprite2D" parent="PartsSKeletonContainer/Parts/BackFrontLeg"]
position = Vector2(-73.2502, -11.7639)
rotation = -0.106575
texture = ExtResource("20_8xnke")

[node name="FrontFrontLeg" type="Node2D" parent="PartsSKeletonContainer/Parts"]

[node name="WolfLfLeg2" type="Sprite2D" parent="PartsSKeletonContainer/Parts/FrontFrontLeg"]
position = Vector2(-49.6792, -35.5631)
rotation = -0.263735
texture = ExtResource("21_405jx")

[node name="WolfLfLeg1" type="Sprite2D" parent="PartsSKeletonContainer/Parts/FrontFrontLeg"]
position = Vector2(-39.9046, -31.2533)
rotation = -0.0694134
texture = ExtResource("22_kr552")

[node name="WolfLfFoot" type="Sprite2D" parent="PartsSKeletonContainer/Parts/FrontFrontLeg"]
position = Vector2(-49.1579, -33.6323)
rotation = -0.263735
texture = ExtResource("23_s5fh0")

[node name="WolfLHead" type="Sprite2D" parent="PartsSKeletonContainer/Parts"]
position = Vector2(-39, -35)
texture = ExtResource("15_4klb8")

[node name="Skeleton2D" type="Skeleton2D" parent="PartsSKeletonContainer"]
modification_stack = SubResource("SkeletonModificationStack2D_vmo7g")

[node name="Base" type="Bone2D" parent="PartsSKeletonContainer/Skeleton2D"]
position = Vector2(-22, -48)
rest = Transform2D(1, 0, 0, 1, -22, -48)

[node name="Body" type="Bone2D" parent="PartsSKeletonContainer/Skeleton2D/Base"]
rest = Transform2D(1, 0, 0, 1, 0, 0)

[node name="Front" type="Bone2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body"]
position = Vector2(-41, -5)
rest = Transform2D(1, 0, 0, 1, -41, -5)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Front"]
position = Vector2(24, 20)
remote_path = NodePath("../../../../../Parts/Body/WolfBody1")

[node name="Head" type="Bone2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Front"]
visible = false
position = Vector2(-18, -26)
rest = Transform2D(1, 0, 0, 1, -18, -26)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Front/Head"]
position = Vector2(42, 44)
remote_path = NodePath("../../../../../../Parts/WolfLHead")

[node name="BackFrontShoulder2" type="Bone2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Front"]
position = Vector2(13, 20)
rest = Transform2D(1, 0, 0, 1, 13, 20)
metadata/_local_pose_override_enabled_ = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Front/BackFrontShoulder2"]
position = Vector2(11, 4)
remote_path = NodePath("../../../../../../Parts/FrontBackLeg/WolfRfLeg1")

[node name="BackFrontLeg" type="Bone2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Front/BackFrontShoulder2"]
visible = false
position = Vector2(4, 47)
rest = Transform2D(1, 0, 0, 1, 4, 47)
metadata/_local_pose_override_enabled_ = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Front/BackFrontShoulder2/BackFrontLeg"]
position = Vector2(6, -43)
remote_path = NodePath("../../../../../../../Parts/FrontBackLeg/WolfRfLeg2")

[node name="BackFrontLegPaw" type="Bone2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Front/BackFrontShoulder2/BackFrontLeg"]
position = Vector2(-3, 31)
rest = Transform2D(1, 0, 0, 1, -3, 31)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Front/BackFrontShoulder2/BackFrontLeg/BackFrontLegPaw"]
position = Vector2(7.33333, -72.1111)
remote_path = NodePath("../../../../../../../../Parts/FrontBackLeg/WolfRfLeg3")

[node name="FrontFrontShoulder" type="Bone2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Front"]
position = Vector2(5, 21)
rotation = -0.282743
rest = Transform2D(1, 0, 0, 1, 5, 21)
metadata/_local_pose_override_enabled_ = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Front/FrontFrontShoulder"]
position = Vector2(18, 2)
remote_path = NodePath("../../../../../../Parts/FrontFrontLeg/WolfLfLeg1")

[node name="FontFrontLeg" type="Bone2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Front/FrontFrontShoulder"]
visible = false
position = Vector2(-2, 47)
rest = Transform2D(1, 0, 0, 1, -2, 47)
metadata/_local_pose_override_enabled_ = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Front/FrontFrontShoulder/FontFrontLeg"]
position = Vector2(20, -47)
remote_path = NodePath("../../../../../../../Parts/FrontFrontLeg/WolfLfLeg2")

[node name="FrontFrontLegPaw" type="Bone2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Front/FrontFrontShoulder/FontFrontLeg"]
position = Vector2(-7, 29)
rest = Transform2D(1, 0, 0, 1, -7, 29)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Front/FrontFrontShoulder/FontFrontLeg/FrontFrontLegPaw"]
position = Vector2(27, -74)
remote_path = NodePath("../../../../../../../../Parts/FrontFrontLeg/WolfLfFoot")

[node name="Back" type="Bone2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body"]
position = Vector2(36, -5)
rest = Transform2D(1, 0, 0, 1, 36, -5)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Back"]
position = Vector2(-51, 20)
remote_path = NodePath("../../../../../Parts/Body/WolfBody2")

[node name="Tail" type="Bone2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Back"]
visible = false
position = Vector2(26, 1)
rest = Transform2D(1, 0, 0, 1, 26, 1)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Back/Tail"]
position = Vector2(-65, 25)
remote_path = NodePath("../../../../../../Parts/WolfTail")

[node name="FrontBactTight" type="Bone2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Back"]
position = Vector2(9, 30)
rotation = 0.282743
rest = Transform2D(1, 0, 0, 1, 9, 30)
metadata/_local_pose_override_enabled_ = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Back/FrontBactTight"]
position = Vector2(-61, -2)
remote_path = NodePath("../../../../../../Parts/BackFrontLeg/WolfLbLeg1")

[node name="FrontBackLeg" type="Bone2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Back/FrontBactTight"]
visible = false
position = Vector2(34, 48)
rest = Transform2D(1, 0, 0, 1, 34, 48)
metadata/_local_pose_override_enabled_ = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Back/FrontBactTight/FrontBackLeg"]
position = Vector2(-97, -53)
remote_path = NodePath("../../../../../../../Parts/BackFrontLeg/WolfLbLeg2")

[node name="FrontBackPaw" type="Bone2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Back/FrontBactTight/FrontBackLeg"]
visible = false
position = Vector2(0, 25)
rest = Transform2D(1, 0, 0, 1, 0, 25)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Back/FrontBactTight/FrontBackLeg/FrontBackPaw"]
position = Vector2(-98, -82)
remote_path = NodePath("../../../../../../../../Parts/BackFrontLeg/WolfLbFoot")

[node name="BackBactTight2" type="Bone2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Back"]
position = Vector2(-15, 33)
rest = Transform2D(1, 0, 0, 1, -15, 33)
metadata/_local_pose_override_enabled_ = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Back/BackBactTight2"]
position = Vector2(-55, -13)
remote_path = NodePath("../../../../../../Parts/BackBackLeg/WolfRbLeg1")

[node name="BackBackLeg" type="Bone2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Back/BackBactTight2"]
visible = false
position = Vector2(17, 43)
rest = Transform2D(1, 0, 0, 1, 17, 43)
metadata/_local_pose_override_enabled_ = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Back/BackBactTight2/BackBackLeg"]
position = Vector2(-72, -52)
remote_path = NodePath("../../../../../../../Parts/BackBackLeg/WolfRbLeg2")

[node name="BackBackPaw" type="Bone2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Back/BackBactTight2/BackBackLeg"]
position = Vector2(-14, 20)
rest = Transform2D(1, 0, 0, 1, -14, 20)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PartsSKeletonContainer/Skeleton2D/Base/Body/Back/BackBactTight2/BackBackLeg/BackBackPaw"]
position = Vector2(-58, -72)
remote_path = NodePath("../../../../../../../../Parts/BackBackLeg/WolfRbLeg3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qmwp7")
}

[node name="IKTargetFrontFrontLeg" type="Node2D" parent="."]
position = Vector2(-40, 95.5556)

[node name="IKTargetFrontBackLeg" type="Node2D" parent="."]
position = Vector2(51.1111, 115.556)

[node name="IKTargetBackFrontLeg" type="Node2D" parent="."]
position = Vector2(-53.3333, 86.6667)

[node name="IKTargetBackBackLeg" type="Node2D" parent="."]
position = Vector2(4.44444, 55.5556)

[connection signal="timeout" from="DirectionChangeTimer" to="." method="_on_direction_change_timer_timeout"]
[connection signal="timeout" from="Damageable/Timer" to="StateMachine/Hit" method="_on_timer_timeout"]
[connection signal="timeout" from="StateMachine/Attack/ChargePreparationTimer" to="StateMachine/Attack" method="_on_charge_preparation_timer_timeout"]
[connection signal="timeout" from="StateMachine/Attack/ChargeTimer" to="StateMachine/Attack" method="_on_charge_timer_timeout"]
[connection signal="timeout" from="StateMachine/Attack/AttacBuffer" to="StateMachine/Attack" method="_on_attac_buffer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
